--- a/Source/com.hannsg.Stocksappfinal.MainMenu/res/values/strings.xml
+++ b/Source/com.hannsg.Stocksappfinal.MainMenu/res/values/strings.xml
@@ -1,10 +1,9 @@
 <resources>
 
-    <string name="app_name">Stocks App</string>
+    <string name="app_name">Stocksappfinal</string>
     <string name="hello_world">Hello world!</string>
     <string name="menu_settings">Settings</string>
-    <string name="title_activity_main">Stocks App</string>
-    <string name="title_activity_portfolio">Portfolio Value</string>
-    <string name="title_breakdown">Stocks Breakdown</string>
+    <string name="title_activity_main">Portfolio</string>
+    <string name="title_activity_portfolio">Portfolio</string>
 
 </resources>
